manifests/base/hospital-recommendation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-recommendation-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  selector:
    app: hospital-recommendation-service
  ports:
    - protocol: TCP
      port: 80          # 인그레스나 타 서비스가 이 서비스에 접근할 포트
      targetPort: 8080    # 파드 컨테이너 내부 포트 (containerPort와 일치)
  type: ClusterIP         # 내부 통신용 IP 설정
